# llm_actions

./: .gitignore  LICENSE  README.md  pyproject.toml  workspace.toml
.devcontainer/: devcontainer.json
components/llm_actions/base/: __init__.py  core.py
components/llm_actions/packs/: __init__.py  browsing.py  google_serper.py  markdown_editing.py  playwright_browsing.py  sleep.py
development/notebooks/: playground.ipynb
test/components/llm_actions/base/: test_core.py
