[tool.poetry]
name = "llm-actions"
version = "0.0.0"
description = "A collection of actions and skillsets for LLM following the openai function calling format"
authors = ["ndilsou <nasoungadoy@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [
    { include = "llm_actions/base", from = "components" },
    { include = "development" },
]

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^23.1.0"
tenacity = "^8.2.2"
pydantic = "^2.1.1"
jinja2 = "^3.1.2"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
jupyterlab = "^4.0.3"
ipython = "^8.14.0"
pyright = "^1.1.320"
ruff = "^0.0.282"
typing-extensions = "^4.7.1"
faker = "^19.2.0"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"
pytest-env = "^0.8.2"
bump-pydantic = "^0.6.1"
openai = "^0.27.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
